fixed overflow in portfolio

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -111,3 +111,6 @@ body{
 	color: #ffffff;
 	overflow: auto;
   }
+  .row{
+	overflow: hidden;
+  }
